my first commit

--- a/FirstPage.html
+++ b/FirstPage.html
@@ -38,7 +38,7 @@
                 <h2>Popular Books</h2>
                 <div class="popular-books">
                     <div class="book-card">
-                        <img src="images/demon.jpg" alt="Book Title">
+                        <img src="images/demon.jpg" alt="demon book">
                         <div class="book-details">
                             <h3>The Demon of Unrest</h3>
                             <p>The Demon of Unrest: A Saga of Hubris, Heartbreak, and Heroism at the Dawn of the Civil War</p>
@@ -54,7 +54,7 @@
                         </div>
                     </div>
                     <div class="book-card">
-                        <img src="images/the-end.jpg" alt="Another Book Title">
+                        <img src="images/the-end.jpg" alt="the end book">
                         <div class="book-details">
                             <h3>The End of Everything</h3>
                             <p>The End of Everything: How Wars Descend into Annihilation</p>
@@ -70,7 +70,7 @@
                         </div>
                     </div>
                     <div class="book-card">
-                        <img src="images/power.jpg" alt="Yet Another Book Title">
+                        <img src="images/power.jpg" alt="power book">
                         <div class="book-details">
                             <h3>The 48 Laws of Power</h3>
                             <p>A fascinating exploration of yet another topic.</p>
@@ -86,10 +86,42 @@
                         </div>
                     </div>
                     <div class="book-card">
-                        <img src="images/iron.jpg" alt="Yet Another Book Title">
+                        <img src="images/iron.jpg" alt="iron flame book">
                         <div class="book-details">
                             <h3>Iron Flame (The Empyrean, 2)</h3>
                             <p>Iron Flame (The Empyrean, 2) Book</p>
+                            <span class="price">$29.45</span>
+                            <div class="cart-icon-container">
+                                <img src="images/icons/Ellipse.png" alt="Ellipse" class="ellipse">
+                                <img src="images/icons/shopping-basket1.png" alt="Add to Cart" class="cart-icon">
+                            </div>
+                            <button class="wishlist-btn">
+                                <img src="images/icons/Ellipse-heart.png" alt="Ellipse" class="ellipse-heart">
+                                <img src="images/icons/heart.png" alt="Add to Wishlist" class="heart-icon">
+                            </button>
+                        </div>
+                    </div>
+                    <div class="book-card">
+                        <img src="images/Perfect_Son.jpg" alt="Perfect Son Book">
+                        <div class="book-details">
+                            <h3>The Perfect Son</h3>
+                            <p>A gripping psychological thriller with a breathtaking twist</p>
+                            <span class="price">$29.45</span>
+                            <div class="cart-icon-container">
+                                <img src="images/icons/Ellipse.png" alt="Ellipse" class="ellipse">
+                                <img src="images/icons/shopping-basket1.png" alt="Add to Cart" class="cart-icon">
+                            </div>
+                            <button class="wishlist-btn">
+                                <img src="images/icons/Ellipse-heart.png" alt="Ellipse" class="ellipse-heart">
+                                <img src="images/icons/heart.png" alt="Add to Wishlist" class="heart-icon">
+                            </button>
+                        </div>
+                    </div>
+                    <div class="book-card">
+                        <img src="images/places.jpg" alt="Places Book">
+                        <div class="book-details">
+                            <h3>Oh, the Places You'll Go!</h3>
+                            <p>From soaring to high heights and seeing great sights to being left in a Lurch on a prickle-ly perch</p>
                             <span class="price">$29.45</span>
                             <div class="cart-icon-container">
                                 <img src="images/icons/Ellipse.png" alt="Ellipse" class="ellipse">
