--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     <div class="wrapper">
         <header>        
             <div class="logo">
-                <img src="images/book-logo2.png" alt="Custom Shop Logo">
+                <a href="index.html"><img src="images/book-logo2.png"  alt="Logo" ></a>
                 <span>Books</span>
             </div>
             <nav>
-                <a href="#" class="active">Home</a>
-                <a href="#">Products</a>
+                <a href="index.html" class="active">Home</a>
+                <a href="SecondPage.html">Products</a>
                 <a href="#">About</a>
                 <a href="#">Contact</a>
             </nav>
