--- a/SecondPage.html
+++ b/SecondPage.html
@@ -13,14 +13,15 @@
     <div class="wrapperSecPage">
         <header>        
             <div class="logo">
-                <img src="images/book-logo2.png" alt="Custom Shop Logo">
+                
+                <a href="index.html"><img src="images/book-logo2.png"  alt="Logo" ></a>         
                 <span>Books</span>
             </div>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="products.html" class="active">Products</a>
-                <a href="about.html">About</a>
-                <a href="contact.html">Contact</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
             </nav>
         </header>
 
