--- a/SecondPage.html
+++ b/SecondPage.html
@@ -91,33 +91,33 @@
             </div>
         </main>
     </div>
-        <footer>
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>WHO WE ARE</h3>
-                    <ul>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Team</a></li>
-                        <li><a href="#">Work With Us</a></li>
-                    </ul>
-                    <div class="footer-social">
-                        <a href="https://twitter.com"><img src="images/icons/Twitter.png" alt="Twitter"></a>
-                        <a href="https://facebook.com"><img src="images/icons/Facebook.png" alt="Facebook"></a>
-                        <a href="https://instagram.com"><img src="images/icons/Insta.png" alt="Instagram"></a>
-                    </div>
-                    <div class="footer-bottom">
-                        © 2024 Books
-                    </div>
+    <footer>
+        <div class="footer-content">
+            <div class="footer-section" >
+                <h3>WHO WE ARE</h3>
+                <ul>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Team</a></li>
+                    <li><a href="#">Work With Us</a></li>
+                </ul>
+                <div class="footer-social">
+                    <a href="https://twitter.com" target="_blank"><img src="images/icons/Twitter.png" alt="Twitter"></a>
+                    <a href="https://facebook.com" target="_blank"><img src="images/icons/Facebook.png" alt="Facebook"></a>
+                    <a href="https://instagram.com" target="_blank"><img src="images/icons/Insta.png" alt="Instagram"></a>
                 </div>
-                <div class="footer-section" style="left: 308px;">
-                    <h3>FOLLOW US</h3>
-                    <ul>
-                        <li><a href="https://twitter.com">Twitter</a></li>
-                        <li><a href="https://facebook.com">Facebook</a></li>
-                        <li><a href="https://instagram.com">Instagram</a></li>
-                    </ul>
+                <div class="footer-bottom">
+                    © 2024 Books
                 </div>
             </div>
-        </footer>
+            <div class="footer-section" style="left: 308px;">
+                <h3>FOLLOW US</h3>
+                <ul>
+                    <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
+                    <li><a href="https://facebook.com" target="_blank">Facebook</a></li>
+                    <li><a href="https://instagram.com" target="_blank">Instagram</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
