--- a/SecondPage.html
+++ b/SecondPage.html
@@ -81,7 +81,7 @@
                             <input type="email" id="email" name="email" required>
                         </div>
                         <div class="form-group">
-                            <button type="" class="submit-button">Submit</button>
+                            <button type="button" class="submit-button">Submit</button>
                         </div>
                     </form>
                 </section>
