--- a/SecondPage.html
+++ b/SecondPage.html
@@ -90,7 +90,7 @@
     </div>
     <footer>
         <div class="footer-content">
-            <div class="footer-section" >
+            <div class="footer-section">
                 <h3>WHO WE ARE</h3>
                 <ul>
                     <li><a href="#">About</a></li>
@@ -106,7 +106,7 @@
                     © 2024 Books
                 </div>
             </div>
-            <div class="footer-section" style="left: 308px;">
+            <div class="footer-section follow-us">
                 <h3>FOLLOW US</h3>
                 <ul>
                     <li><a href="https://twitter.com" target="_blank">Twitter</a></li>
@@ -116,5 +116,6 @@
             </div>
         </div>
     </footer>
+    
 </body>
 </html>
